--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
                         </div>
                     </div>
                     <p class="a-cluster-of-organiz a-cluster-of montserrat-light-white-30px">
-                        A acluster of organizations, research centers, companies reshaping the European Artificial Intelligence
+                        A cluster of organizations, research centers, companies reshaping the European Artificial Intelligence
                         community.
                     </p>
                     <div class="the-a-io-d-community jura-light-white-52px">
                         The AIoD community
                     </div>
                     <p class="a-cluster-of-organiz-1 a-cluster-of-organiz-3 montserrat-light-white-16px">
-                        Ad cluster of organizations, research centers, companies reshaping the European Artificial Intelligence
+                        A cluster of organizations, research centers, companies reshaping the European Artificial Intelligence
                         community.
                     </p>
                     <div class="a-cluster-of-organizations a-cluster-of jura-light-white-30px">
@@ -67,7 +67,7 @@
                         AI ecosystem
                     </div>
                     <p class="a-cluster-of-organiz-2 a-cluster-of-organiz-3 montserrat-light-white-16px">
-                        As cluster of organizations, research centers, companies reshaping the European Artificial Intelligence
+                        A cluster of organizations, research centers, companies reshaping the European Artificial Intelligence
                         community.
                     </p>
                     <div class="a-cluster-of-organizations-1 jura-light-white-30px">
