Fix: More typos

--- a/register.html
+++ b/register.html
@@ -56,8 +56,8 @@
                         <div class="group-786">
                             <div class="overlap-group2">
                                 <div class="group-124"><img class="icon_close" src="img/icon-close.svg" alt="icon_close" /></div>
-                                <p class="welcome-to-a-io-d-community-portal">Welcome to AIoD Community Portal</p>
-                                <div class="create-new-account valign-text-middle">Create new account.</div>
+                                <p class="welcome-to-a-io-d-community-portal">Welcome to the AIoD Community Portal</p>
+                                <div class="create-new-account valign-text-middle">Create new account</div>
                                 <div class="caixa-texto-container">
                                     <div class="caixa-texto">
                                         <div class="email valign-text-middle jura-semi-bold-white-12px">Email *</div>
