--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/home-1440.css" />
     <link rel="stylesheet" type="text/css" href="css/styleguide.css" />
     <link rel="stylesheet" type="text/css" href="css/globals.css" />
-    <title></title>
+    <title>AIoD Community Portal</title>
 </head>
 <body>
 <div class="container-center-horizontal">
@@ -86,20 +86,24 @@
                     </div>
                     <div class="card01">
                         <div class="img" style="overflow:hidden;background-color: #ffffff;">
-                            <img src="https://www.ai4europe.eu/sites/default/files/styles/16_9_2400/public/2023-03/STAR_market_1600x9002.png" alt="Something" width="385" />
+                            <a href="news-item.html">
+                                <img src="https://www.ai4europe.eu/sites/default/files/styles/16_9_2400/public/2023-04/Embedded%20Vision%20Summit%20Irida%20Labs.jpeg" alt="Something" width="435" />
+                            </a>
                         </div>
                         <div class="texto-1">
                             <div class="pchakra-text">
                                 <div class="frame-26">
                                     <p class="i-nergy-open-call-2-evaluation-report valign-text-middle jura-light-white-22px">
-                                        MARKET by STAR is available!
+                                        <a href="news-item.html">
+                                            Irida Labs to Exhibit at the 2023 Embedded Vision Summit
+                                        </a>
                                     </p>
                                 </div>
                             </div>
                         </div>
                         <div class="date-container jura-medium-yellow-sunshine-12px">
                             <div class="date valign-text-middle">01.06.2023</div>
-                            <div class="date-1 valign-text-middle">14.03.2023</div>
+                            <div class="date-1 valign-text-middle">25.04.2023</div>
                         </div>
                     </div>
                     <div class="frame-25-1">
@@ -112,9 +116,9 @@
                             the Artificial Intelligence Ecosystem Forum 2023 taking place on Thursday 29 and Friday 30 June 2023.
                         </p>
                     </div>
-                    <div class="a-io-d-explorer valign-text-middle a-io-d jura-light-white-54px">AIoD explorer</div>
+                    <div class="a-io-d-explorer valign-text-middle a-io-d jura-light-white-54px">Development Roadmap</div>
                     <p class="view-current-project valign-text-middle jura-light-white-22px-2">
-                        View current projects and their interdependencies
+                        The new community portal is currently under development
                     </p>
                     <div class="time">
                         <div class="overlap-group5">
@@ -186,7 +190,15 @@
                     <div class="img-1" style="overflow:hidden; background-color:#fff;">
                         <img src="https://www.ai4europe.eu/sites/default/files/styles/16_9_2400/public/2023-05/generic%20use_AI%20Ecosystem%20Forum_1033x591_0.jpg" width="600" height="320" alt="AI Ecosystem Forum" />
                     </div>
-                    <div class="img-2"></div>
+                    <div class="img-2 development-roadmap">
+                        <ul>
+                            <li> <span class="version">v1.0</span> Ability to upload Projects, News, Events &amp; Opportunities <span class="date">(Sept. 2023)</span></li>
+                            <li> <span class="version">v2.0</span> Ability to follow Projects and use the Newsletter tool <span class="date">(Oct. 2023)</span></li>
+                            <li> <span class="version">v3.0</span> Ability to view analytics for your content <span class="date">(Nov. 2023)</span></li>
+                            <li> <span class="version">v4.0</span> Improvements & new features based on feedback <span class="date">(Dec. 2023)</span></li>
+                        </ul>
+
+                    </div>
                     <div class="rectangle-347"></div>
                     <div class="rectangle-348"></div>
                     <div class="rectangle-351"></div>
@@ -267,13 +279,17 @@
                     <div class="latest-news valign-text-middle">Latest news</div>
                     <div class="card01-1 card01-3">
                         <div class="img-3" style="overflow:hidden;">
-                            <img src="https://www.ai4europe.eu/sites/default/files/styles/16_9_600/public/2023-06/Immagine%202023-06-01%20120310.png" width="450" alt="AI Hand" />
+                            <a href="news-item.html">
+                                <img src="https://www.ai4europe.eu/sites/default/files/styles/16_9_600/public/2023-06/Immagine%202023-06-01%20120310.png" width="450" alt="AI Hand" />
+                            </a>
                         </div>
                         <div class="texto">
                             <div class="pchakra-text">
                                 <div class="frame-26">
                                     <p class="irida-labs-to-exhibi valign-text-middle jura-light-white-22px">
-                                        AI Maturity Assessments Online<br /> recommendation tool
+                                        <a href="news-item.html">
+                                            AI Maturity Assessments Online<br /> recommendation tool
+                                        </a>
                                     </p>
                                 </div>
                             </div>
@@ -284,7 +300,7 @@
                 <div class="group-32">
                     <div class="bt-3 bt-8"><img class="send-3" src="img/send-3.svg" alt="send" /></div>
                 </div>
-                <a href="#">
+                <a href="news.html">
                     <div class="group-713-4 group-713-5">
                         <img class="vector" src="img/vector.svg" alt="Vector" />
                     </div>
@@ -298,25 +314,28 @@
                     </p>
                 </div>
                 <div class="group-679">
-                    <div class="number-1 valign-text-middle jura-normal-white-104px">370</div>
+                    <div class="number-1 valign-text-middle jura-normal-white-104px">31</div>
                     <div class="opportunities jura-semi-bold-yellow-sunshine-22px">Opportunities</div>
                     <p class="lorem-ipsum-dolor-si-4 montserrat-light-silver-chalice-14px">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac
-                        aliquet odio mattis.
+                        The European Commission is supporting a portfolio of projects that each have available funding for organisations. Explore the Open Calls of these projects and identify if your company is in a position to apply.
                     </p>
                 </div>
                 <div class="upcoming-events valign-text-middle" id="events">Upcoming events</div>
                 <div class="card01-2 card01-3">
                     <div class="img-4" style="overflow: hidden; background-color: #fff">
+                        <a href="news-item.html">
                         <img src="https://www.ai4europe.eu/sites/default/files/styles/16_9_2400/public/2023-02/Coala%20logo.jpg" width="385" alt="COALA" />
+                        </a>
                     </div>
                     <div class="frame-26-1">
                         <div class="texto">
                             <div class="pchakra-text">
                                 <div class="frame-26">
                                     <p class="ai4-media-releases-th valign-text-middle jura-light-white-22px">
-                                        COALA EU Didactic Concept<br />
-                                        and Learning Nuggets
+                                        <a href="news-item.html">
+                                            COALA EU Didactic Concept<br />
+                                            and Learning Nuggets
+                                        </a>
                                     </p>
                                     <div class="date-2 valign-text-middle jura-medium-yellow-sunshine-12px">27.02.2023</div>
                                 </div>
@@ -340,7 +359,7 @@
         </div>
         <div class="frame-14">
             <a href="#"><img class="menu-1 menu-6" src="img/menu.svg" alt="Projects" /></a>
-            <a href="#"><img class="menu-2 menu-6" src="img/menu-1.svg" alt="News" /></a>
+            <a href="news.html"><img class="menu-2 menu-6" src="img/menu-1.svg" alt="News" /></a>
             <a href="#"><img class="menu-3 menu-6" src="img/menu-2.svg" alt="Events" /></a>
             <a href="#"> <img class="menu-4 menu-6" src="img/menu-3.svg" alt="Opportunities" /></a>
             <a href="#"><img class="menu-5 menu-6" src="img/menu-4.svg" alt="Contribute" /></a>
