--- a/index.html
+++ b/index.html
@@ -346,23 +346,34 @@
             </div>
             <div class="frame-22"></div>
         </div>
-        <div class="menu">
-            <img class="logotipo" src="img/logotipo-1.svg" alt="logotipo" />
-            <div class="frame-22-1">
-                <img class="pesquisa" src="img/pesquisa.svg" alt="pesquisa" />
-                <a href="login.html">
-                    <div class="bt-4 bt-8">
-                        <div class="login valign-text-middle jura-semi-bold-yellow-sunshine-12px">Login</div>
-                        <img class="icon_login" src="img/icon-login.svg" alt="icon_login" /></div
-                    ></a>
-            </div>
+        <div class="menu-backdrop">
+
         </div>
-        <div class="frame-14">
-            <a href="#"><img class="menu-1 menu-6" src="img/menu.svg" alt="Projects" /></a>
-            <a href="news.html"><img class="menu-2 menu-6" src="img/menu-1.svg" alt="News" /></a>
-            <a href="#"><img class="menu-3 menu-6" src="img/menu-2.svg" alt="Events" /></a>
-            <a href="#"> <img class="menu-4 menu-6" src="img/menu-3.svg" alt="Opportunities" /></a>
-            <a href="#"><img class="menu-5 menu-6" src="img/menu-4.svg" alt="Contribute" /></a>
+        <div class="menu-wrapper">
+            <div class="menu-contents">
+                <div class="menu-logo">
+                    <img class="logotipo" src="img/logotipo-1.svg" alt="logotipo" />
+                </div>
+                <div class="menu-items">
+                    <a href="#"><img class="menu-1 menu-6" src="img/menu.svg" alt="Projects" /></a>
+                    <a href="news.html"><img class="menu-2 menu-6" src="img/menu-1.svg" alt="News" /></a>
+                    <a href="#"><img class="menu-3 menu-6" src="img/menu-2.svg" alt="Events" /></a>
+                    <a href="#"> <img class="menu-4 menu-6" src="img/menu-3.svg" alt="Opportunities" /></a>
+                    <a href="#"><img class="menu-5 menu-6" src="img/menu-4.svg" alt="Contribute" /></a>
+                </div>
+                <div class="menu-login">
+                    <div>
+                        <img class="pesquisa" src="img/pesquisa.svg" alt="pesquisa" />
+                    </div>
+                    <div>
+                        <a href="login.html">
+                            <div class="bt-4 bt-8">
+                                <div class="login valign-text-middle jura-semi-bold-yellow-sunshine-12px">Login</div>
+                                <img class="icon_login" src="img/icon-login.svg" alt="icon_login" /></div
+                            ></a>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="group-782">
             <div class="overlap-group6">
