Fix: Fixed menu on misc pages

--- a/login.html
+++ b/login.html
@@ -107,29 +107,34 @@
             </div>
             <div class="frame-22"></div>
         </div>
-        <div class="menu">
-            <div class="logotipo">
-                <div class="group">
-                    <img class="group-1" src="img/group-3@2x.png" alt="Group" />
-                    <img class="group-2" src="img/group-4@2x.png" alt="Group" />
-                    <img class="group-3" src="img/group-5@2x.png" alt="Group" />
-                    <a href="home-1440.html"><img class="logotipo-1" src="img/logotipo-4.svg" alt="logotipo" /> </a>
-                </div>
-            </div>
-            <div class="frame-22-1">
-                <img class="pesquisa" src="img/pesquisa-2.svg" alt="pesquisa" />
-                <div class="bt-6 bt-10">
-                    <div class="login valign-text-middle jura-semi-bold-yellow-sunshine-12px">Login</div>
-                    <img class="icon_login" src="img/icon-login.svg" alt="icon_login" />
-                </div>
-            </div>
+        <div class="menu-backdrop">
+
         </div>
-        <div class="frame-14">
-            <img class="menu-1 menu-6" src="img/menu.svg" alt="Menu" />
-            <img class="menu-2 menu-6" src="img/menu-1.svg" alt="Menu" />
-            <img class="menu-3 menu-6" src="img/menu-2.svg" alt="Menu" />
-            <img class="menu-4 menu-6" src="img/menu-3.svg" alt="Menu" />
-            <img class="menu-5 menu-6" src="img/menu-4.svg" alt="Menu" />
+        <div class="menu-wrapper">
+            <div class="menu-contents">
+                <div class="menu-logo">
+                    <img class="logotipo" src="img/logotipo-1.svg" alt="logotipo" />
+                </div>
+                <div class="menu-items">
+                    <a href="#"><img class="menu-1 menu-6" src="img/menu.svg" alt="Projects" /></a>
+                    <a href="news.html"><img class="menu-2 menu-6" src="img/menu-1.svg" alt="News" /></a>
+                    <a href="#"><img class="menu-3 menu-6" src="img/menu-2.svg" alt="Events" /></a>
+                    <a href="#"> <img class="menu-4 menu-6" src="img/menu-3.svg" alt="Opportunities" /></a>
+                    <a href="#"><img class="menu-5 menu-6" src="img/menu-4.svg" alt="Contribute" /></a>
+                </div>
+                <div class="menu-login">
+                    <div>
+                        <img class="pesquisa" src="img/pesquisa.svg" alt="pesquisa" />
+                    </div>
+                    <div>
+                        <a href="login.html">
+                            <div class="login-button">
+                                <div class="login valign-text-middle jura-semi-bold-yellow-sunshine-12px">Login</div>
+                                <img class="icon_login" src="img/icon-login.svg" alt="icon_login" /></div
+                            ></a>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="group-782">
             <div class="overlap-group6">
