--- a/news.html
+++ b/news.html
@@ -125,7 +125,7 @@
                     </div>
                 </div>
                 <div class="rectangle-296"></div>
-                <a href="home-1440.html">
+                <a href="index.html">
                     <div class="frame-28">
                         <img class="group-27" src="img/group-27@2x.png" alt="Group 27" />
                         <div class="log-out montserrat-semi-bold-picton-blue-13px">Log out</div>
@@ -134,7 +134,7 @@
             </div>
         </div>
         <div class="frame-14">
-            <img class="menu" src="img/menu.svg" alt="Menu" />
+            <img class="menu-x" src="img/menu.svg" alt="Menu" />
             <a href="news.html">
                 <img class="menu-1 menu-5" src="img/menu-1.svg" alt="Menu" />
             </a>
