--- a/news-item.html
+++ b/news-item.html
@@ -311,6 +311,18 @@
         </div>
     </div>
 </div>
+
+<div class="under-construction" draggable="true">
+    <div class="message">
+        <div class="message-content">
+            <div class="message-text">
+                The AI-on-Demand Community Portal is currently under construction.
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="js/main.js"></script>
+
 </body>
 </html>
