--- a/register.html
+++ b/register.html
@@ -198,6 +198,17 @@
         </div>
     </div>
 </div>
+
+<div class="under-construction" draggable="true">
+    <div class="message">
+        <div class="message-content">
+            <div class="message-text">
+                The AI-on-Demand Community Portal is currently under construction.
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="js/main.js"></script>
 
 </body>
