Fix: Logged-in sticky menu demo

--- a/news-item.html
+++ b/news-item.html
@@ -67,44 +67,47 @@
                 </div>
             </div>
         </div>
-        <div class="group-840">
-            <div class="logotipo">
-                <div class="group">
-                    <img class="group-1" src="img/group-3@2x.png" alt="Group" />
-                    <img class="group-2" src="img/group-4@2x.png" alt="Group" />
-                    <img class="group-3" src="img/group-5@2x.png" alt="Group" />
+
+        <div class="menu-backdrop">
+
+        </div>
+        <div class="menu-wrapper">
+            <div class="menu-contents">
+                <div class="menu-logo">
                     <a href="index.html">
-                        <img class="logotipo-1" src="img/logotipo.svg" alt="logotipo" />
+                        <img class="logotipo" src="img/logotipo-1.svg" alt="logotipo" />
+                    </a>
+                </div>
+                <div class="menu-items">
+                    <a href="#"><img class="menu-1 menu-6" src="img/menu.svg" alt="Projects" /></a>
+                    <a href="news.html"><img class="menu-2 menu-6" src="img/menu-1.svg" alt="News" /></a>
+                    <a href="#"><img class="menu-2 menu-5" src="img/menu-2.svg" alt="Menu" /></a>
+                    <a href="#"> <img class="menu-4 menu-6" src="img/menu-3.svg" alt="Opportunities" /></a>
+                    <a href="#"><img class="menu-5 menu-6" src="img/menu-4.svg" alt="Contribute" /></a>
+                </div>
+                <div class="menu-login">
+                    <div>
+                        <img class="pesquisa" src="img/pesquisa.svg" alt="pesquisa" />
+                    </div>
+                    <div class="frame-29">
+                        <img class="rectangle-45" src="img/rectangle-45-3.svg" alt="Rectangle 45" />
+                        <div class="group-4"></div>
+                        <div class="frame">
+                            <div class="name jura-bold-white-15px">Leucippus</div>
+                            <div class="lobacx jura-medium-white-13px">Abderita</div>
+                        </div>
+                    </div>
+                    <div class="rectangle-296"></div>
+                    <a href="index.html">
+                        <div class="frame-28">
+                            <img class="group-27" src="img/group-27@2x.png" alt="Group 27" />
+                            <div class="log-out montserrat-semi-bold-picton-blue-13px">Log out</div>
+                        </div>
                     </a>
                 </div>
             </div>
-            <div class="frame-30">
-                <div class="frame-29">
-                    <img class="rectangle-45" src="img/rectangle-45.svg" alt="Rectangle 45" />
-                    <div class="group-4"></div>
-                    <div class="frame">
-                        <div class="name jura-bold-white-15px">Johnathan Doe</div>
-                        <div class="lobacx jura-medium-white-13px">LOBA.cx</div>
-                    </div>
-                </div>
-                <div class="rectangle-296"></div>
-                <a href="index.html">
-                    <div class="frame-28">
-                        <img class="group-27" src="img/group-27@2x.png" alt="Group 27" />
-                        <div class="log-out montserrat-semi-bold-picton-blue-13px">Log out</div>
-                    </div></a
-                >
-            </div>
         </div>
-        <div class="frame-14">
-            <img class="menu-x" src="img/menu.svg" alt="Menu" />
-            <a href="news.html">
-                <img class="menu-1 menu-5" src="img/menu-1.svg" alt="Menu" />
-            </a>
-            <img class="menu-2 menu-5" src="img/menu-2.svg" alt="Menu" />
-            <img class="menu-3 menu-5" src="img/menu-3.svg" alt="Menu" />
-            <img class="menu-4 menu-5" src="img/menu-4.svg" alt="Menu" />
-        </div>
+
         <div class="group-767">
             <p class="per-cvai-computer valign-text-middle">PerCV.ai - Computer Vision &amp; AI Platform​</p>
             <p class="irida-labs-computer">
@@ -312,7 +315,7 @@
     </div>
 </div>
 
-<div class="under-construction" draggable="true">
+<div class="under-construction" id="under-construction" >
     <div class="message">
         <div class="message-content">
             <div class="message-text">
