--- a/login.html
+++ b/login.html
@@ -203,7 +203,7 @@
     </div>
 </div>
 
-<div class="under-construction" draggable="true">
+<div class="under-construction" id="under-construction">
     <div class="message">
         <div class="message-content">
             <div class="message-text">
