--- a/news-item.html
+++ b/news-item.html
@@ -81,7 +81,7 @@
                 <div class="menu-items">
                     <a href="#"><img class="menu-1 menu-6" src="img/menu.svg" alt="Projects" /></a>
                     <a href="news.html"><img class="menu-2 menu-6" src="img/menu-1.svg" alt="News" /></a>
-                    <a href="#"><img class="menu-2 menu-5" src="img/menu-2.svg" alt="Menu" /></a>
+                    <a href="#"><img class="menu-2 menu-5" src="img/menu-2.svg" alt="Events" /></a>
                     <a href="#"> <img class="menu-4 menu-6" src="img/menu-3.svg" alt="Opportunities" /></a>
                     <a href="#"><img class="menu-5 menu-6" src="img/menu-4.svg" alt="Contribute" /></a>
                 </div>
