--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
+<html lang="en">
 <html>
   <head>
     <meta charset="utf-8" />
     <!--<meta name=description content="This site was generated with Anima. www.animaapp.com"/>-->
     <!-- <link rel="shortcut icon" type=image/png href="https://animaproject.s3.amazonaws.com/home/favicon.png" /> -->
     <meta name="viewport" content="width=1440, maximum-scale=1.0" />
-    <link rel="shortcut icon" type="image/png" href="https://animaproject.s3.amazonaws.com/home/favicon.png" />
-    <meta name="og:type" content="website" />
-    <meta name="twitter:card" content="photo" />
+    <link rel="stylesheet" type="text/css" href="css/main.css" />
     <link rel="stylesheet" type="text/css" href="css/privacy-policy.css" />
     <link rel="stylesheet" type="text/css" href="css/styleguide.css" />
     <link rel="stylesheet" type="text/css" href="css/globals.css" />
+    <title>Lorem ipsum policy</title>
   </head>
-  <body style="margin: 0; background: #000613">
-    <input type="hidden" id="anPageName" name="page" value="privacy-policy" />
+  <body>
     <div class="container-center-horizontal">
       <div class="privacy-policy screen">
         <div class="overlap-group5">
@@ -53,41 +52,48 @@
           <h1 class="title jura-light-white-52px">Privacy policy</h1>
           <p class="lorem-ipsum-dolor-si-3">Lorem ipsum dolor sit amet, consectetur <br />adipiscing elit</p>
         </div>
-        <img class="menu" src="img/menu-10@2x.png" alt="menu" />
-        <div class="group-840">
-          <div class="logotipo">
-            <div class="group">
-              <img class="group-1" src="img/group-12@2x.png" alt="Group" />
-              <img class="group-2" src="img/group-13@2x.png" alt="Group" />
-              <img class="group-3" src="img/group-14@2x.png" alt="Group" />
-              <a href="home-1440.html"><img class="logotipo-1" src="img/logotipo-2.svg" alt="logotipo" /> </a>
+
+        <div class="menu-backdrop">
+
+        </div>
+        <div class="menu-wrapper">
+          <div class="menu-contents">
+            <div class="menu-logo">
+              <a href="index.html">
+                <img class="logotipo" src="img/logotipo-1.svg" alt="logotipo" />
+              </a>
             </div>
-          </div>
-          <div class="frame-30 frame">
-            <div class="frame-29 frame">
-              <img class="rectangle-45" src="img/rectangle-45-1.svg" alt="Rectangle 45" />
-              <div class="group-4"></div>
-              <div class="frame-15 frame">
-                <div class="name jura-bold-white-15px">Johnathan Doe</div>
-                <div class="lobacx jura-medium-white-13px">LOBA.cx</div>
+            <div class="menu-items">
+              <a href="#"><img class="menu-item" src="img/menu.svg" alt="Projects" /></a>
+              <a href="news.html"><img class="menu-item" src="img/menu-1.svg" alt="News" /></a>
+              <a href="#"><img class="menu-item" src="img/menu-2.svg" alt="Events" /></a>
+              <a href="#"> <img class="menu-item" src="img/menu-3.svg" alt="Opportunities" /></a>
+              <a href="#"><img class="menu-item" src="img/menu-4.svg" alt="Contribute" /></a>
+            </div>
+            <div class="menu-login">
+              <div>
+                <img class="pesquisa" src="img/pesquisa.svg" alt="pesquisa" />
               </div>
+              <div class="login-user">
+                <div class="login-picture"></div>
+                <div class="login-name">
+                  <div class="name jura-bold-white-15px">Leucippus</div>
+                  <div class="lobacx jura-medium-white-13px">Abderita</div>
+                </div>
+              </div>
+              <div class="rectangle-296"></div>
+              <a href="index.html">
+                <div class="logout-user">
+                  <img class="group-27" src="img/group-27@2x.png" alt="Group 27" />
+                  <div class="log-out montserrat-semi-bold-picton-blue-13px">Log out</div>
+                </div>
+              </a>
+
             </div>
-            <div class="rectangle-296"></div>
-            <a href="home-1440.html">
-              <div class="frame-28 frame">
-                <img class="group-27" src="img/group-27@2x.png" alt="Group 27" />
-                <div class="log-out montserrat-semi-bold-picton-blue-13px">Log out</div>
-              </div></a
-            >
           </div>
         </div>
-        <div class="frame-14 frame">
-          <img class="menu-1" src="img/menu.svg" alt="Menu" />
-          <img class="menu-2" src="img/menu-1.svg" alt="Menu" />
-          <img class="menu-3" src="img/menu-2.svg" alt="Menu" />
-          <img class="menu-4" src="img/menu-3.svg" alt="Menu" />
-          <img class="menu-5" src="img/menu-4.svg" alt="Menu" />
-        </div>
+
+
         <div class="group-788">
           <p class="x3 jura-bold-white-30px">Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
           <p class="lorem-ipsum-dolor-si valign-text-middle jura-light-white-18px">
@@ -166,7 +172,9 @@
                     <img class="youtube" src="img/youtube.svg" alt="youtube" />
                   </div>
                   <div class="group-781 jura-normal-white-13px">
-                    <div class="privacy-policy-1">Privacy policy</div>
+                    <div class="privacy-policy-1">
+                      <a href="privacy-policy.html">Privacy policy</a>
+                    </div>
                     <div class="terms-conditions">Terms &amp; Conditions</div>
                   </div>
                   <div class="bt-1 bt-3">
