Upd: Minor fixes

--- a/news-item.html
+++ b/news-item.html
@@ -26,7 +26,7 @@
             </div>
             <div class="home-news">home &gt; news</div>
             <h1 class="title jura-light-white-52px">News</h1>
-            <p class="irida-labs-to-exhibi valign-text-middle">
+            <p class="irida-labs-to-exhibi valign-text-middle news-title typo-title">
                 Irida Labs to Exhibit at the 2023 Embedded Vision Summit
             </p>
             <div class="group-784">
@@ -49,7 +49,7 @@
                     <img class="vector-1 vector-4" src="img/vector.svg" alt="Vector" />
                 </div>
             </div>
-            <p class="well-be-at-embedded jura-normal-white-16px">
+            <p class="well-be-at-embedded typo-summary">
                 We&#39;ll be at Embedded Vision Summit on May 22–24 in Santa Clara, CA! See in action PerCV.ai Computer
                 Vision AI Platform - our software &amp; services platform that streamlines the Vision AI adoption for
                 Industry4.0 &amp; Smart City apps
@@ -109,7 +109,7 @@
         </div>
 
         <div class="group-767">
-            <p class="per-cvai-computer valign-text-middle">PerCV.ai - Computer Vision &amp; AI Platform​</p>
+            <p class="per-cvai-computer valign-text-middle">PerCV.ai - Computer Vision &amp;amp; AI Platform</p>
             <p class="irida-labs-computer">
                 <span class="jura-light-stack-16px">Irida Labs’</span><span class="jura-light-white-16px">&nbsp;</span
             ><a href="https://iridalabs.com/percv-ai-computer-vision-software-services-platform/" target="_blank"
